--- a/src/main/java/com/FootballClient/Presentation/Owner/AddCoach.form
+++ b/src/main/java/com/FootballClient/Presentation/Owner/AddCoach.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.FootballClient.Presentation.Owner.AddCoach">
-  <grid id="27dc6" binding="panelAddCoach" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="menuPanel" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="867a2" class="javax.swing.JLabel" binding="label">
+      <component id="867a2" class="javax.swing.JLabel" binding="chooseUserLable">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -21,7 +21,7 @@
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="97a26" class="javax.swing.JComboBox" binding="comboBox">
+      <component id="97a26" class="javax.swing.JComboBox" binding="usersComboBox">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -29,7 +29,7 @@
           <model/>
         </properties>
       </component>
-      <component id="e63c0" class="javax.swing.JLabel" binding="labelTeam">
+      <component id="e63c0" class="javax.swing.JLabel" binding="chooseTeamLable">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -37,13 +37,13 @@
           <text value="Choose Team"/>
         </properties>
       </component>
-      <component id="d916b" class="javax.swing.JComboBox" binding="comboBoxTeam">
+      <component id="d916b" class="javax.swing.JComboBox" binding="teamsComboBox">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
-      <component id="fcc5e" class="javax.swing.JButton" binding="okButton" default-binding="true">
+      <component id="fcc5e" class="javax.swing.JButton" binding="addButton">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
