--- a/src/main/java/com/FootballClient/Presentation/Owner/AddField.form
+++ b/src/main/java/com/FootballClient/Presentation/Owner/AddField.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.FootballClient.Presentation.Owner.AddField">
-  <grid id="27dc6" binding="panelAddField" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="menuPanel" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -8,34 +8,26 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="b2fee" class="javax.swing.JLabel" binding="label">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="to whict team you want to add field?"/>
-        </properties>
-      </component>
       <hspacer id="dd14c">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="c7c6b" class="javax.swing.JComboBox" binding="comboBoxTeam">
+      <component id="c7c6b" class="javax.swing.JComboBox" binding="teamsComboBox">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
-      <component id="8ba19" class="javax.swing.JLabel">
+      <component id="8ba19" class="javax.swing.JLabel" binding="fieldNameLable">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="fielnd name:"/>
+          <text value="field name:"/>
         </properties>
       </component>
-      <component id="22ae7" class="javax.swing.JTextField" binding="textFieldField">
+      <component id="22ae7" class="javax.swing.JTextField" binding="fieldNameTextField">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -43,7 +35,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="afd8d" class="javax.swing.JButton" binding="okButton" default-binding="true">
+      <component id="afd8d" class="javax.swing.JButton" binding="addButton">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -65,6 +57,14 @@
         </constraints>
         <properties>
           <text value=""/>
+        </properties>
+      </component>
+      <component id="b2fee" class="javax.swing.JLabel" binding="chooseTeamLable">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="to which team would you like to add field?"/>
         </properties>
       </component>
     </children>
