--- a/src/main/java/com/FootballClient/Presentation/Owner/RemoveCoach.form
+++ b/src/main/java/com/FootballClient/Presentation/Owner/RemoveCoach.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.FootballClient.Presentation.Owner.AddNewOwner">
-  <grid id="27dc6" binding="menuPanel" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.FootballClient.Presentation.Owner.RemoveCoach">
+  <grid id="27dc6" binding="menuPanel" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -8,56 +8,53 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="919" class="javax.swing.JLabel" binding="chooseUserLable">
+      <component id="a433b" class="javax.swing.JLabel" binding="chooseCoachLable">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="which user would you like to become a new owner?"/>
+          <text value="Who is the coach you would like to remove?"/>
         </properties>
       </component>
-      <component id="8c57a" class="javax.swing.JComboBox" binding="usersComboBox">
+      <vspacer id="8d3a9">
+        <constraints>
+          <grid row="1" column="1" row-span="5" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <component id="aa264" class="javax.swing.JComboBox" binding="coachesComboBox">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
-      <component id="d2787" class="javax.swing.JLabel" binding="chooseTeamLable">
+      <component id="172fe" class="javax.swing.JLabel" binding="chooseTeamLable">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Choose Team"/>
+          <text value="Choose team:"/>
         </properties>
       </component>
-      <component id="57b0e" class="javax.swing.JComboBox" binding="teamsComboBox">
+      <component id="14ca4" class="javax.swing.JComboBox" binding="teamsComboBox">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
-      <component id="bf65e" class="javax.swing.JButton" binding="addButton">
+      <component id="a94ec" class="javax.swing.JButton" binding="OKButton">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Ok"/>
+          <text value="OK"/>
         </properties>
       </component>
-      <component id="79358" class="javax.swing.JButton" binding="backButton" default-binding="true">
+      <component id="6516e" class="javax.swing.JButton" binding="backButton">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Back"/>
-        </properties>
-      </component>
-      <component id="3d62c" class="javax.swing.JLabel" binding="errorLabel">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value=""/>
         </properties>
       </component>
     </children>
