--- a/src/main/java/com/FootballClient/Presentation/Owner/RemovePlayer.form
+++ b/src/main/java/com/FootballClient/Presentation/Owner/RemovePlayer.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.FootballClient.Presentation.Owner.AddManager">
-  <grid id="27dc6" binding="menuPanel" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.FootballClient.Presentation.Owner.RemovePlayer">
+  <grid id="27dc6" binding="menuPanel" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -8,31 +8,31 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="62030" class="javax.swing.JLabel" binding="chooseUserLable">
+      <component id="60ee0" class="javax.swing.JLabel" binding="choosePlayerLable">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="which user would you like to become a team manager?"/>
+          <text value="Which player would you like to remove?"/>
         </properties>
       </component>
-      <hspacer id="b218d">
+      <hspacer id="b5ed2">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <vspacer id="5c91c">
+      <vspacer id="d020b">
         <constraints>
-          <grid row="1" column="1" row-span="6" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="5" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="57f86" class="javax.swing.JComboBox" binding="usersComboBox">
+      <component id="e3cd1" class="javax.swing.JComboBox" binding="playersComboBox">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
-      <component id="f82ab" class="javax.swing.JLabel" binding="chooseTeamLable">
+      <component id="4ec42" class="javax.swing.JLabel" binding="chooseTeamLable">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -40,34 +40,26 @@
           <text value="Choose Team"/>
         </properties>
       </component>
-      <component id="6b0cd" class="javax.swing.JComboBox" binding="teamsComboBox">
+      <component id="b8795" class="javax.swing.JComboBox" binding="teamsComboBox">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
-      <component id="ab088" class="javax.swing.JButton" binding="addButton">
+      <component id="59905" class="javax.swing.JButton" binding="OKButton" default-binding="true">
         <constraints>
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Ok"/>
+          <text value="OK"/>
         </properties>
       </component>
-      <component id="e5868" class="javax.swing.JButton" binding="backButton" default-binding="true">
+      <component id="af108" class="javax.swing.JButton" binding="backButton">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Back"/>
-        </properties>
-      </component>
-      <component id="208a1" class="javax.swing.JLabel" binding="errorLabel">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value=""/>
         </properties>
       </component>
     </children>
