--- a/src/main/java/com/FootballClient/Presentation/Owner/RemoveAsset.form
+++ b/src/main/java/com/FootballClient/Presentation/Owner/RemoveAsset.form
@@ -53,7 +53,7 @@
           <text value="Field"/>
         </properties>
       </component>
-      <component id="ef41a" class="javax.swing.JButton" binding="addButton">
+      <component id="ef41a" class="javax.swing.JButton" binding="removePlayerButton">
         <constraints>
           <grid row="8" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -69,7 +69,7 @@
           <text value="Back"/>
         </properties>
       </component>
-      <component id="3f97b" class="javax.swing.JLabel" binding="addlable">
+      <component id="3f97b" class="javax.swing.JLabel" binding="addLabel">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -85,7 +85,7 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="84f5d" class="javax.swing.JLabel" binding="chooseTeamLable">
+      <component id="84f5d" class="javax.swing.JLabel" binding="chooseTeamLabel">
         <constraints>
           <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -145,13 +145,29 @@
         </constraints>
         <properties/>
       </component>
-      <component id="eb457" class="javax.swing.JTextField" binding="fieldTextField">
+      <component id="70188" class="javax.swing.JButton" binding="removeFieldButton">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
+          <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <text value="Ok"/>
+        </properties>
+      </component>
+      <component id="a1b41" class="javax.swing.JButton" binding="removeManagerButton">
+        <constraints>
+          <grid row="7" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Ok"/>
+        </properties>
+      </component>
+      <component id="85b31" class="javax.swing.JButton" binding="removeCoachButton">
+        <constraints>
+          <grid row="9" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Ok"/>
+        </properties>
       </component>
     </children>
   </grid>
